read package information at compile time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ghqrs"
 version = "0.1.0"
 authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
+description = "Manages cloned repositories from Git hostings"
 
 build = "build.rs"
 
