--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,9 +5,12 @@ branches:
   - master
 
 environment:
-  TARGET: ghqrs
-  TOOLCHAIN: stable
-  HOST: x86_64-pc-windows-msvc
+  global:
+    TARGET: ghqrs
+    TOOLCHAIN: stable
+  matrix:
+    - HOST: x86_64-pc-windows-msvc
+    - HOST: x86_64-pc-windows-gnu
 
 install:
   - ps: Start-FileDownload 'https://static.rust-lang.org/rustup/dist/i686-pc-windows-msvc/rustup-init.exe'
@@ -21,8 +24,7 @@ build_script:
   - copy target\release\%TARGET%.exe .\%TARGET%-%HOST%.exe
 
 test_script:
-  - set RUST_TEST_THREADS=1
-  - cargo test --release --verbose
+  - cargo test --release
 
 artifacts:
   - path: $(TARGET)-$(HOST).exe
