--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,16 @@
-version: 0.1.0.{build}
+version: {build}
 
 branches:
   only:
-  - master
+    - master
 
 environment:
   global:
-    TARGET: ghqrs
+    PKGNAME: ghqrs
     TOOLCHAIN: stable
   matrix:
+    - HOST: i686-pc-windows-msvc
     - HOST: x86_64-pc-windows-msvc
-    - HOST: x86_64-pc-windows-gnu
 
 install:
   - ps: Start-FileDownload 'https://static.rust-lang.org/rustup/dist/i686-pc-windows-msvc/rustup-init.exe'
@@ -20,14 +20,13 @@ install:
   - cargo -V
 
 build_script:
-  - cargo build --release
-  - copy target\release\%TARGET%.exe .\%TARGET%-%HOST%.exe
+  - .\ci\make_package.bat
 
 test_script:
-  - cargo test --release
+  - cargo test --release --target=%HOST%
 
 artifacts:
-  - path: $(TARGET)-$(HOST).exe
+  - path: $(PKGNAME)-$(HOST)
 
 deploy:
   provider: GitHub
